修改配置，添加博文

--- a/source/_posts/三层架构.md
+++ b/source/_posts/三层架构.md
@@ -1,8 +1,11 @@
 ---
 title: 三层架构：表示层——业务逻辑层——数据访问层
+id: a-2018-09-12-10-58-00
 date: 2018-09-12 10:58:00
 tags: [架构,系统,软件]
 categories: [架构]
+keywords: [架构,系统,软件]
+description: 三层架构：表示层——业务逻辑层——数据访问层
 ---
 
 # 1. 什么是三层架构
@@ -13,6 +16,8 @@ categories: [架构]
 > **分而治之**
 >
 > **分而治之**
+
+<!-- more -->
 
 * 表示层：负责直接跟用户进行交互，一般也就是指系统的界面，用于数据录入，数据显示等。意味着只做与外观显示相关的工作，不属于他的工作不用做。
 * 业务逻辑层：用于做一些有效的验证工作，以更好地保证程序运行的健壮性。如完成数据添加、修改和查询等；不允许指定的文本框中输入空字符串，数据格式是否正确及数据类型验证；用户的权限合法性判断等。通过以上诸多判断以决定是否将操作继续向后传递，尽量保证程序的正常运行。
