--- a/source/_posts/三层架构.md
+++ b/source/_posts/三层架构.md
@@ -8,6 +8,8 @@ keywords: [架构,系统,软件]
 description: 三层架构：表示层——业务逻辑层——数据访问层
 ---
 
+<script type="text/javascript" src="/js/src/baidu.js"></script>
+
 # 1. 什么是三层架构
 
 所谓的三层开发就是将系统的整个业务应用划分为 `表示层`,`业务逻辑层`,`数据访问层`，这样有利于系统的开发、维护、部署和扩展。分层是为了实现 **“高内聚，低耦合”**，采用 **“分而治之”** 的思想，把问题划分开来各个解决，易于控制、易于延展、易于分配资源。进行软件开发设计，一定要懂得
