添加新文章，添加里程碑页

--- a/themes/new/languages/zh-CN.yml
+++ b/themes/new/languages/zh-CN.yml
@@ -11,7 +11,7 @@ menu:
   tags: 标签
   about: 关于
   search: 搜索
-  schedule: 日程表
+  milestone: 里程碑
   sitemap: 站点地图
   commonweal: 公益 404
   message: 留言板
